# teamcity-poc

.teamcity/: pom.xml  settings.kts
project/: pyproject.toml
project/bp_project/: something.py
project/bp_project/tests/: test_something.py
